Upgraded some files

--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: backenduzb/Davomat_IM
+  IMAGE_NAME: backenduzb/EDavomat
   IMAGE_TAG: main
 
 permissions:
