Added two admin panels

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 Django==6.0.1
+django-jazzmin==3.0.1
 et_xmlfile==2.0.0
 frozenlist==1.8.0
 idna==3.11
