--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "openpyxl (>=3.1.5,<4.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "whitenoise (>=6.11.0,<7.0.0)",
-    "django-jazzmin (>=3.0.1,<4.0.0)"
+    "django-jazzmin (>=3.0.1,<4.0.0)",
 ]
 
 
